--- a/donate.html
+++ b/donate.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: "Community Impact"
+title: "Donate"
 description: "Requires some build up time and commitment..."
 header-img: "img/home-bg.jpg"
 ---
